fixed grid in intro section that was causing horizontal scrolling

--- a/css/style.css
+++ b/css/style.css
@@ -4,9 +4,15 @@
     box-sizing: border-box;
 }
 
-* {
+
+
+/*
+****Used to find and fix horizontal scrolling issue*****
+ * {
     outline: 1px solid red;
   }
+
+  */
 
 html {
     scroll-behavior: smooth;
@@ -42,6 +48,7 @@ html {
         --fs-h3: 1.5rem;
         --fs-body: 1.125rem;
     }
+
 }
 
 /* General styles */
@@ -268,13 +275,13 @@ header {
 @media (min-width: 600px) {
     .intro {
         display: grid;
-        width: min-content;
+        max-width: 100vw;
         margin: 0 auto;
         grid-column-gap: 1em;
         grid-template-areas:
             "img title"
             "img subtitle";
-        grid-template-columns: min-content max-content;
+        grid-template-columns: min-content auto;
     }
 
     .intro__img {
@@ -291,7 +298,7 @@ header {
         text-align: right;
         position: relative;
         left: -1.5em;
-        width: calc(100% + 1.5em);
+        max-width: 100%;
     }
 }
 
